Publishing: Updates Authentication so Facebook auth works on IE9. (fixes: ALF-10701)
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@31851 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/console/channel-admin.css
+++ b/root/projects/slingshot/source/web/components/console/channel-admin.css
@@ -141,3 +141,10 @@ div.channels.managePermissions .permissions-show
 {
    padding: 1em 1em 0;
 }
+
+.channels iframe
+{
+   height:1px;
+   width: 1px;
+   border: 0;
+}
